@@ -1,3 +1,8 @@
+2004-12-20  Werner Koch  <wk@g10code.com>
+
+	* assuan-socket-connect.c (assuan_socket_connect) [W32]: Allow for
+	a drive letter in the path.
+
 2004-12-19  Werner Koch  <wk@g10code.com>
 
 	* assuan-pipe-server.c (assuan_init_pipe_server) [W32]: Map file
